# Kiwi

./: .gitignore  LICENSE  README.md  cli.py  digestion.py  enzyme.py  mass.py  peptide.py  protein.py  pyproject.toml  reader.py  tester.py
benchmarks/: canonical_database.ipynb
src/kiwi/: cli.py  digestion.py  enzyme.py  mass.py  reader.py
